fix: track overflow

--- a/fm/bleh.user.css
+++ b/fm/bleh.user.css
@@ -6296,6 +6296,7 @@
             display: flex;
             flex-direction: column;
             flex: 1;
+            overflow: hidden;
 
             & > .chartlist-name,
             & > .chartlist-artist,
